
	* src/gui/item_ammount.cpp: Item amount dialog is now skipped
	when there is only one item on the stack.
	* src/browserbox.cpp, src/browserbox.h, src/chat.h, src/main.cpp:
	Added possibility of length limitation to browserbox and used it
	for the chatlog (length set by the config option "ChatLogLength").
	* src/chat.cpp, src/chat.h: Removed some completely useless code
	from the chat class.

2007-10-24  Philipp Sehmisch  <tmw@crushnet.org>

	* data/items.xml, data/graphics/items/generic-darkcrystal.png:
	Added a new quest loot item for the halloween event.

2007-10-22  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/particle.cpp: Plugged memory leak.
	* src/configuration.cpp, src/main.cpp: Plugged memory leak. Cleaned
	code.

2007-10-21  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/window.cpp, src/gui/window.h: Removed redundant resizable
	flag. Factored moving/resizing code, so that events are fired only
	once per size change.
	* src/resources/spritedef.cpp: Plugged memory leak in sprites.
	* src/resources/action.cpp: Fixed double-free of sprite actions.
	* src/resources/iteminfo.cpp, src/resources/iteminfo.h: Plugged memory
	leak in equipment sound.
	* src/resources/monsterdb.cpp: Plugged memory leak in database reader.
	* src/engine.cpp, src/engine.h, src/game.cpp: Fixed current map not
	deleted on server change.

2007-10-20  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/playerbox.cpp: Centered sprite inside selection box.

2007-10-19  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/images/ambient/fog.png: Added fog effect overlay
	graphic.

2007-10-18  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/resources/iteminfo.h, src/resources/itemdb.cpp: Removed unused
	slot field.

2007-10-18  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/hairstyle7-male.png,
	data/graphics/sprites/hairstyle7-female.png; Readded hairstyle number 7.
